--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.11",
     "vite": "^5.4.1"
   }
